<resources>
    <string name="app_name" translatable="false">WeatherApp</string>

    <!-- Activities -->
    <string name="title_activity_forecast">Forecast</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Errors -->
    <string name="no_internet">No Internet</string>
    <string name="not_loaded">The data could not be loaded, please try again</string>

    <!-- Menu -->
    <string name="menu_settings">Settings</string>
    <string name="menu_maps">Open in Maps</string>
    <string name="menu_background">Change Background</string>

    <!-- Sync Preferences -->
    <string name="header_location">Location</string>
    <string name="current_location">Current Location</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="invalid_location">The stored location is not valid</string>

    <!-- Weather -->
    <string name="weather_temp" translatable="false">%1$.1f°</string>
    <string name="weather_feels_like">Feels like %1$.1f°</string>
    <string name="weather_temp_min">Minimum %1$.1f°</string>
    <string name="weather_temp_max">Maximum %1$.1f°</string>
    <string name="location_lat_lon" translatable="false">%1$10.8f / %2$11.8f</string>

    <!-- Buttons -->
    <string name="button_forecast">Forecast</string>

    <!-- Descriptions -->
    <string name="description_location">Location</string>
    <string name="description_weather">Weather</string>
    <string name="description_weather_icon">Weather Icon</string>
</resources>