<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/header_location">

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:disableDependentsState="true"
            app:icon="@drawable/ic_baseline_location_on_24"
            app:key="current_location"
            app:title="@string/current_location" />

        <EditTextPreference
            app:defaultValue="51.4107812"
            app:dependency="current_location"
            app:icon="@drawable/ic_baseline_latitude_24"
            app:key="latitude"
            app:title="@string/latitude" />

        <EditTextPreference
            app:defaultValue="5.5583965"
            app:dependency="current_location"
            app:icon="@drawable/ic_baseline_longitude_24"
            app:key="longitude"
            app:title="@string/longitude" />

    </PreferenceCategory>

</PreferenceScreen>