<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CurrentWeatherFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/weather_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="84dp"
            android:textSize="48sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/weather_temp" />

        <TextView
            android:id="@+id/weather_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="8dp"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/weather_temp"
            app:layout_constraintTop_toBottomOf="@+id/weather_temp"
            tools:text="Location" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="4dp"
            android:contentDescription="@string/description_location"
            android:src="@drawable/ic_baseline_location_on_24"
            app:layout_constraintBottom_toBottomOf="@+id/weather_location"
            app:layout_constraintStart_toEndOf="@+id/weather_location"
            app:layout_constraintTop_toTopOf="@+id/weather_location" />

        <com.android.volley.toolbox.NetworkImageView
            android:id="@+id/weather_icon"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="16dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/description_weather"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="@+id/weather_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/weather_temp" />

        <TextView
            android:id="@+id/weather_feels_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="@+id/weather_location"
            app:layout_constraintTop_toBottomOf="@+id/weather_location"
            tools:text="@string/weather_feels_like" />

        <TextView
            android:id="@+id/weather_temp_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/weather_feels_like"
            app:layout_constraintTop_toBottomOf="@+id/weather_feels_like"
            tools:text="@string/weather_temp_min" />

        <TextView
            android:id="@+id/weather_temp_max"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            app:layout_constraintStart_toStartOf="@+id/weather_temp_min"
            app:layout_constraintTop_toBottomOf="@+id/weather_temp_min"
            tools:text="@string/weather_temp_max" />

        <TextView
            android:id="@+id/location_lat_lon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/location_lat_lon" />

        <Button
            android:id="@+id/forecast_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_forecast"
            app:layout_constraintBottom_toBottomOf="@+id/weather_temp_max"
            app:layout_constraintEnd_toEndOf="@+id/weather_icon" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>